syntax = "proto3";

package proto.live;

message RegionSimpleInfo_v2 {
  string name = 1;
  string title = 2;
  string type = 3;
  string dispatch_url = 4;
}
